--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   font-family: "Quicksand", sans-serif;
   font-size: 10px;
   height: 100%;
+ -webkit-tap-highlight-color: transparent;
 }
 .nav {
   width: 100%;
