--- a/responsive.css
+++ b/responsive.css
@@ -9,6 +9,42 @@
     text-align: center;
   }
 }
+@media only screen and (max-width: 676px) {
+  .section {
+    font-size: 1.2rem;
+  }
+  .section .top-side .title {
+    font-weight: 700;
+    font-size: 15px;
+    display: inline-block;
+  }
+  .section .top-side .title:after {
+    content: "";
+    display: block;
+    width: 50%;
+    border-bottom: 1px solid #494949;
+    margin: 8px auto;
+  }
+  .section.gallery .filters ul li {
+    padding: 5px 10px;
+  }
+  .section.gallery .filters ul li:after {
+    content: "";
+    display: block;
+    width: calc(0% - 20px);
+    position: absolute;
+    height: 2px;
+    background: #000000;
+    transition: width 350ms ease-out;
+  }
+  .section.gallery .filters ul li:hover:after {
+    width: calc(100% - 20px);
+    transition: width 350ms ease-out;
+  }
+  .section.gallery .filters ul li.active:after {
+    width: calc(100% - 20px);
+  }
+}
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   .section.gallery .filters-content .grid-item {
