--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   font-size: 10px;
   height: 100%;
   -webkit-tap-highlight-color: transparent;
+  /* overflow-x: hidden; */
 }
 .nav {
   width: 100%;
@@ -74,11 +75,7 @@ body {
 /* Media qurey section */
 /* TABLETS */
 @media screen and (max-width: 768px) {
-  body {
-    padding: 0 30px 0 30px;
-  }
   nav.nav {
-    width: 92.2%;
     height: 65px;
     position: fixed;
     z-index: 1;
@@ -135,7 +132,6 @@ body {
 /* MOBILE-L-SIZES */
 @media screen and (max-width: 425px) {
   nav.nav {
-    width: 85.8%;
     height: 65px;
     position: fixed;
     z-index: 1;
@@ -156,12 +152,10 @@ body {
 }
 @media screen and (max-width: 375px) {
   nav.nav {
-    width: 84%;
   }
 }
 @media screen and (max-width: 320px) {
   nav.nav {
-    width: 81.2%;
   }
   .navTrigger {
     cursor: pointer;
@@ -190,7 +184,6 @@ body {
 }
 @media screen and (min-width: 768px) {
   nav.nav {
-    width: 92.2%;
   }
 }
 /* ************ */
