--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ body {
 @media only screen and (max-width: 768px) and (min-width: 425px) {
   .home-slider {
     max-width: 100%;
-    max-height: 350px;
+    height: 350px;
   }
 }
 .slide1,
