--- a/style.css
+++ b/style.css
@@ -199,13 +199,13 @@ body {
 @media only screen and (max-width: 425px) and (min-width: 375px) {
   .home-slider {
     max-width: 100%;
-    height: 275px;
+    height: 200px;
   }
 }
 @media only screen and (max-width: 768px) and (min-width: 425px) {
   .home-slider {
     max-width: 100%;
-    height: 350px;
+    max-height: 350px;
   }
 }
 .slide1,
@@ -631,7 +631,7 @@ article.row-content div {
   }
   .cards-grid-item {
     min-width: 150px;
-    max-width: 150px;
+    max-width: 178px;
   }
 }
 @media only screen and (min-width: 375px) and (max-width: 425px) {
@@ -651,7 +651,7 @@ article.row-content div {
   }
   .cards-grid-item {
     min-width: 150px;
-    max-width: 150px;
+    max-width: 178px;
   }
 }
 @media only screen and (min-width: 425px) and (max-width: 768px) {
@@ -671,7 +671,7 @@ article.row-content div {
   }
   .cards-grid-item {
     min-width: 150px;
-    max-width: 150px;
+    max-width: 200px;
   }
 }
 /* *************** */
