--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ body {
 @media only screen and (max-width: 375px) {
   .home-slider {
     max-width: 100%;
-    height: 475px;
+    height: 350px;
     position: relative;
     top: 0;
   }
@@ -474,7 +474,7 @@ body {
   color: #8e7bb2;
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 375px) {
   #about-box {
     background: #fff;
     padding: 15px;
@@ -489,7 +489,7 @@ body {
     font-size: 14px;
   }
 }
-@media only screen and (max-width: 425px) and (min-width: 375px) {
+@media only screen and (min-width: 375px) {
   #about-box {
     background: #fff;
     padding: 20px;
@@ -579,6 +579,26 @@ body {
 /* CARDS MEDIA-QUERY SECTION */
 /* ************************* */
 @media only screen and (max-width: 320px) {
+  .wrapper {
+    padding: 2rem 2rem 0 0;
+  }
+  .wrapper h1 {
+    font-size: 2.125em;
+    line-height: 1;
+  }
+  .wrapper p {
+    font-size: 1.5em;
+    font-family: "Nunito", sans-serif;
+    line-height: 2.5;
+    margin-bottom: 1rem;
+    color: #000000;
+  }
+  .cards-grid-item {
+    min-width: 150px;
+    max-width: 178px;
+  }
+}
+@media only screen and (max-width: 375px) {
   .wrapper {
     padding: 2rem 2rem 0 0;
   }
@@ -755,6 +775,33 @@ body {
     margin-top: 25px;
   }
 }
+@media only screen and (max-width: 375px) and (min-width: 320px) {
+  .section {
+    font-size: 1.3rem;
+  }
+  .section .top-side .title {
+    font-weight: 700;
+    font-size: 24px;
+    display: inline-block;
+  }
+  .section.gallery .filters ul li {
+    padding: 5px 10px;
+  }
+  #lb-img img {
+    max-width: 100%;
+    height: 50%;
+  }
+  .section.gallery .filters-content .grid-item {
+    text-align: center;
+  }
+  .grid-item img {
+    max-width: 150px;
+    max-height: 175px;
+  }
+  .section.gallery .filters-content {
+    margin-top: 25px;
+  }
+}
 @media only screen and (max-width: 425px) and (min-width: 375px) {
   .section {
     font-size: 1.3rem;
@@ -862,4 +909,8 @@ and use spans to define size */
   margin: 0 auto; */
   max-width: 100%;
   max-height: auto;
+}
+#map {
+  height: 400px; /* The height is 400 pixels */
+  width: 100%; /* The width is the width of the web page */
 }
